Fix some `@SurpressWarnings`